--- a/todo-app/style.css
+++ b/todo-app/style.css
@@ -28,57 +28,9 @@ body {
     justify-content: center;
 }
 
-.add-task {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.add-task .task-input {
-    width: 20rem;
-    font-size: 1.2rem;
-    height: 3rem;
-    text-align: center;
-    border-radius: 4rem;
-    border: 1px solid #bebcbc;
-    margin-right: 1rem;
-}
-
-.add-task input:focus {
-    outline: none;
-}
-
-.config {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.options {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem;
-    padding: 1.5rem;
-    text-align: center;
-    height: 3rem;
-    border: 1px solid #bebcbc;
-    border-radius: 2rem;
-}
-
-.options h5 {
-    font-size: 0.8rem;
-    margin: 0.5rem;
-}
-
-.options label {
-    margin-right: 1rem;
-    font-size: 0.8rem;
-}
-
 .list-task {
     background-color: #f4f4f4;
+    min-height: 90vh;
     border-radius: 2rem;
     padding: 1rem;
     width: 100%;
@@ -107,6 +59,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     background-color: #dfdddd;
+    min-height: 70vh;
     border-radius: 1rem;
     padding-bottom: 3rem;
     height: auto;
